--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 					<ul class="social social-circle">
 						<li><a href="https://www.instagram.com/wersonuv/" target="_blank"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://www.facebook.com/jeruv31" target="_blank"><i class="icon-facebook"></i></a></li>
-						<li><a href="https://github.com/Nite95/" target="_blank"><i class="icon-github"></i></a></li>
+						<li><a href="https://github.com/wersonuribe" target="_blank"><i class="icon-github"></i></a></li>
 					</ul>
 				</div>
 			</div>
